in progress page has modal w/feedback form for user

--- a/public/workit.html
+++ b/public/workit.html
@@ -137,7 +137,7 @@
             <div class="card">
               <a href="#"><img src="assets/gtac_site.png" class="card-img-top img-fluid"></a>
             <h4 class="card-title text-center pt-3">D51 GT Insider</h4>
-            <p class="card-text pr-2 pl-2 pb-2">Where do you feel led to volunteer your time? I'm just ending four years of service on a local committee which reported to a school board with advisory recommendations on matters related to gifted youth in our community. I served as a Co-Chair for two of those years, and during that time created a Google Sites website as a capstone project while working on my master's degree to obtain my certification as a Gifted-talented Education Specialist. This project is a redesign of that original site. During my service on the committee, I saw a need for a digital presence so that transparency, communication, outreach, and collaboration could better be served. This project is part of a torch I'm passing on as I move on to other volunteer commitments.</p>
+            <p class="card-text pr-2 pl-2 pb-2">Where do you feel led to volunteer your time? I'm just ending four years of service on a local committee which reported to a school board with advisory recommendations on matters related to gifted youth in our community. I served as a Co-Chair for two of those years, and during that time created a Google Site for the committee as a capstone project while working on my master's degree to obtain my certification as a Gifted-talented Education Specialist. This project is a redesign of that original site. During my service on the committee, I saw a need for a digital presence so that transparency, communication, outreach, and collaboration could better be served. This project is part of a torch I'm passing on as I move on to other volunteer commitments.</p>
             </div>
         </div>
 
@@ -154,19 +154,44 @@
     <div id="myMod" class="modal fade">
           <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                  <div class="modal-header"><h3 class="modal-title">Title</h3>
+                  <div class="modal-header"><h3 class="modal-title">In Progress</h3>
                   <button type="button" class="close" data-dismiss="modal">
                   <span>x</span></button>
                   </div>
                   <div class="modal-body">
-                    Hello World
+                    You can learn more about some of the coding projects I'm currently working on to continue building my developer skills.  I will update each project profile section w/links to their github repos & live site links soon!
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button>
+                    <button type="button" class="btn btn-primary" data-toggle="collapse" href="#progressmsg">Share Feedback</button><br>
                   </div>
-            </div>
-          </div>
-    </div>
+
+                        <div class="container collapse" id="progressmsg">
+                          <form class="" action="https://formspree.io/d3vignition@gmail.com" method="POST">
+                            <div class="form-group">
+                              <label for="name">Your Name:</label>
+                              <input type="text" class="form-control" id="name" name="name">
+
+                            </div>
+
+                            <div class="form-group">
+                              <label for="email">Your Email:</label>
+                              <input type="email" class="form-control" id="email" name="_replyto">
+
+                            </div>
+
+                            <div class="form-group">
+                              <label for="message">Message:</label>
+                              <textarea rows="7" class="form-control" id="message" name="message"></textarea>
+                            </div>
+
+                        <div class="modal-footer">
+                          <button type="submit" class="btn btn-primary">Send Message</button>
+                        </div> <!-- modal-footer   -->
+                        </form>
+                        </div> <!-- container collapse hilomsg -->
+                  </div> <!-- modal-content   -->
+                  </div> <!-- modal-dialog modal-dialog-centered   -->
+            </div> <!-- myMod -->
 
     <!-- Footer -->
     <footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
