contact and research modals updated

--- a/public/connect.html
+++ b/public/connect.html
@@ -127,16 +127,15 @@
     <div id="myMod" class="modal fade">
           <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                  <div class="modal-header"><h3 class="modal-title">Title</h3>
+                  <div class="modal-header"><h3 class="modal-title">Appreciative of Feedback</h3>
                   <button type="button" class="close" data-dismiss="modal">
                   <span>x</span></button>
                   </div>
                   <div class="modal-body">
-                    Hello World
+                    I like to make sure different parts of this site work, and am appreciative of any suggestions for how to improve it.  Additionally, if you try to send a message & encounter error messages, please feel welcome to email me directly at d3vignition@gmail.com.  I would be grateful to learn of any errors you encounter so that I can address them!
                   </div>
                   <div class="modal-footer">
-                    <!-- send to which email? -->
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Thank You</button>
 
                   </div>
             </div>
