updated hilo game logic so that score & lives resets when player presses play again

--- a/public/hilo.html
+++ b/public/hilo.html
@@ -37,6 +37,7 @@
           width: 100px;
           padding: 1.75em .60em;
           padding-bottom: 2.85em;
+          /* padding: 10px; */
           border: 5px solid rgba(95, 20, 20, 0.45);
           margin: 0 auto;
           text-align: center;
@@ -145,9 +146,14 @@
             <div id="start">
               <button id="btnstart" type="button" class="btn btn-warning text-primary mx-auto mb-2">Start Game</button>
             </div>
+
+            <div id="playAgain">
+              <button id="btnPlayAgain" type="button" class="btn btn-warning text-primary mx-auto mb-2">Play Again</button>
+            </div>
       </div>
 
     <div id="score"></div>
+    <div id="lives"></div>
 
     <div class="col-lg-7">
         <div id="highLow" class="pt-3 pb-3 mx-auto btn-block">
@@ -155,7 +161,7 @@
           <button id="btnlow" type="button"  class="btn btn-outline-danger btn-lg btn-block">Low</button>
         </div>
 
-        <div id="cards" class="pb-3 mx-auto"></div>
+        <div id="cards" class="pb-3 mx-auto text-center"></div>
     </div>
     </div>
     </div>
@@ -245,144 +251,144 @@
 
       <script>
       $(() => {
-
-      $(function() {
-        $('[data-toggle="tooltip"]').tooltip()
-        $('[data-toggle="popover"]').popover()
-      })
-
-      //==========================================================================
-      // variables:
-      let cardOutput = document.getElementById('cards');
-      let count = 0;
-      let score = 0;
-      let lives = 3;
-      let cards = [];
-      const suits = ['spades', 'hearts', 'clubs', 'diams'];
-      const numbers = ['2','3','4','5','6','7','8','9','10','J','Q','K','A'];
-      const $message = $('#messageHL');
-      let scoreOutput = document.getElementById('score');
-
-      const gameStart = () => {
-        const messageChange = $('#start').on('click', (e) => {
-          // console.log('start button clicked');
-          $("#messageHL").text("Game Started!");
-          $(e.currentTarget).css('display', 'none');
-          $('#highLow').css('display','inline-flex');
-          })
-          buildCards();
-          shuffleArray(cards);
-          cardOutput.innerHTML +=showCard();
-        }
-
-      let hilo = (a) => {
-            //calculate winner
-            let win = false;
-            let oldCard = cards[count].cardValue;
-            count++;
-            cardOutput.innerHTML += showCard();
-            $(cardOutput).html += showCard();
-                  let newCard = cards[count].cardValue;
-                  if(a === 'high' && oldCard < newCard) {
-                    win = true;
-                  } else if (a === 'low' && oldCard > newCard) {
-                    win = true;
-                  }
-                        if(win) {
-                            score++;
-                            if(score == 5){
-                              let cards = [];
-                              winState();
-                            } else if (win && score < 5){
-                            $("#messageHL").text("You were correct! Score: " + score + " LIVES remaining:  "+lives);
-                          }
-                          } else {
-                              score--;
-                              lives--;
-                            $("#messageHL").text("You were wrong! Your score is now " + score + ".  LIVES remaining: " +lives);
-
-                                  if(lives == 0) {
-                                    let cards = [];
-                                    endPlay(score);
-                                  }
-                            }
-      }
-
-      const endPlay = (s) => {
-          document.getElementById('highLow').style.display='none';
-          document.getElementById('score');
-          $('#messageHL').text("Game over!  Your score was " + s);
-          $('#start').css('display','block');
-          let count = 0;
-          let score = 0;
-          let lives = 3;
-          let cards = [" "];
-          gameStart();
-      }
-
-      const winState = () => {
-
-        document.getElementById('highLow').style.display='none';
-        document.getElementById('score');
-        $("#messageHL").text("Congratulations!  You've reached 5 points!  You're a High-Roller now! Press Start Game to play again!");
-        $('#start').css('display','block');
-        cardOutput.innerHTML = "";
+        $(function() {
+          $('[data-toggle="tooltip"]').tooltip()
+          $('[data-toggle="popover"]').popover()
+          $('#playAgain').css('display','none')
+        })
+        //==========================================================================
+        // variables:
+        let cardOutput = document.getElementById('cards');
         let count = 0;
+        let firstRun = true;
         let score = 0;
         let lives = 3;
         let cards = [];
-
-        gameStart();
-      }
-
-      const shuffleArray = (array) => {
-          for(let i = array.length -1; i>0; i--){
-            const holder = Math.floor(Math.random()* (i + 1));
-            const temp = array[i];
-            array[i] = array[holder];
-            array[holder] = temp;
+        const suits = ['spades', 'hearts', 'clubs', 'diams'];
+        const numbers = ['2','3','4','5','6','7','8','9','10','J','Q','K','A'];
+        const $message = $('#messageHL');
+        // take out next line? part of other game logic?
+        let scoreOutput = document.getElementById('score');
+        const gameStart = () => {
+          const messageChange = $('#start').on('click', (e) => {
+            $("#messageHL").text("Game Started!");
+            $(e.currentTarget).css('display', 'none');
+            $('#highLow').css('display','inline-flex');
+          });
+          if (firstRun) {
+            buildCards();
+            firstRun = false;
           }
-          return array;
-      }
-
-      let showCard = () => {
-        let c = cards[count];
-        let bgColor = (c.icon == "H" || c.icon == "D")?'red':'black';
-          return '<span class="icard" style="color:'+bgColor+'">'+cards[count].num+'&'+ cards[count].suit+';</span>';
-      }
-
-      const buildCards = () => {
-        cards = [];
-        for(s in suits){
-          const suit = suits[s][0].toUpperCase();
-          for(n in numbers){
-              const card = {
-               suit: suits[s],
-               num: numbers[n],
-               cardValue: parseInt(n) + 2,
-               icon: suit
-            }
-            cards.push(card)
+            shuffleArray(cards);
+            cardOutput.innerHTML +=showCard();
           }
+        let hilo = (a) => {
+              let win = false;
+              let oldCard = cards[count].cardValue;
+              count++;
+              cardOutput.innerHTML += showCard();
+              $(cardOutput).html += showCard();
+                    let newCard = cards[count].cardValue;
+                    if(a === 'high' && oldCard < newCard) {
+                      win = true;
+                    } else if (a === 'low' && oldCard > newCard) {
+                      win = true;
+                    }
+                          if(win) {
+                              score++;
+                              $("#messageHL").text("You were correct! Score: " + score + " LIVES remaining:  "+lives);
+                              if(score >= 5){
+                                winState();
+                              }
+                            } else {
+                                score--;
+                                lives--;
+                              $("#messageHL").text("You were wrong! Your score is now " + score + ".  LIVES remaining: " +lives);
+                                    if(lives == 0) {
+                                      let cards = [];
+                                      endPlay(score);
+                                    }
+                              }
         }
-        // console.log(cards);
-      }
 
-      // event listeners:
-    $('#btnstart').on('click', (e) => {
-      $("#cards").empty();
-      gameStart();
-    })
+        const endPlay = (s) => {
+            document.getElementById('highLow').style.display='none';
+            document.getElementById('score');
+            $('#messageHL').text("Game over!  Your score was " + s + "!  Press Play Again if you dare!");
+            $('#playAgain').css('display','block');
+            let count = 0;
+        }
+        const winState = () => {
+          document.getElementById('highLow').style.display='none';
+          document.getElementById('score');
+          $("#messageHL").text("Congratulations!  You've reached 5 points!  You're a High-Roller now! Press Play Again if you dare!");
+          $('#playAgain').css('display','block');
 
-    $('#btnhigh').on('click', (e) => {
-      hilo('high');
-    })
+        }
+        const playOnceMore = () => {
+          const messageChanges = $('#playAgain').on('click', (e) => {
+            score = 0;
+            lives = 3;
+            count = 0;
+            $("#messageHL").text("Game Started!  Score: "+score+" Lives: "+lives);
+            $(e.currentTarget).css('display', 'none');
+            $('#highLow').css('display','inline-flex');
+            })
 
-    $('#btnlow').on('click', (e) => {
-      hilo('low');
-    })
+            console.log('count: '+count+' score: '+score+' lives: '+lives);
+            buildCards();
+            shuffleArray(cards);
+            cardOutput.innerHTML +=showCard();
+        }
+        const shuffleArray = (array) => {
+            for(let i = array.length -1; i>0; i--){
+              const holder = Math.floor(Math.random()* (i + 1));
+              const temp = array[i];
+              array[i] = array[holder];
+              array[holder] = temp;
+            }
+            return array;
+        }
+        let showCard = () => {
+          let c = cards[count];
+          let bgColor = (c.icon == "H" || c.icon == "D")?'red':'black';
+            return '<span class="icard" style="color:'+bgColor+'">'+cards[count].num+'&'+ cards[count].suit+';</span>';
+        }
+        const buildCards = () => {
+          cards = [];
+          for(s in suits){
+            const suit = suits[s][0].toUpperCase();
+            for(n in numbers){
+                const card = {
+                 suit: suits[s],
+                 num: numbers[n],
+                 cardValue: parseInt(n) + 2,
+                 icon: suit
+              }
+              cards.push(card)
+            }
+          }
+          // console.log(cards);
+        }
+        // event listeners:
+      $('#btnstart').on('click', (e) => {
+        gameStart();
+      })
 
-});
+      $('#btnPlayAgain').on('click', (e) => {
+        $("#cards").empty();
+        $("#score").empty();
+        playOnceMore();
+      })
+
+      $('#btnhigh').on('click', (e) => {
+        hilo('high');
+      })
+
+      $('#btnlow').on('click', (e) => {
+        hilo('low');
+      })
+  });
     </script>
     </body>
   </html>
