updated about page modal

--- a/public/about.html
+++ b/public/about.html
@@ -73,7 +73,6 @@
 
 
   <div id="car" class="carousel slide" data-ride="carousel">
-
     <ol class="carousel-indicators">
       <li data-target="#car" data-slide-to="0" class="active"></li>
       <li data-target="#car" data-slide-to="1"></li>
@@ -137,7 +136,7 @@
                   <div id="set" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                     <div class="card-body">
                       <img src="assets/set.png" class="card-img-top img-fluid pb-3">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                      Beginning a new teaching position where curriculum resources weren't easily accessible set me searching for ways to address the following: how do you help 6th graders deeply understand what visual-spatial intelligence is while they are beginnning to develop abstract reasoning skills?  I drew on experience from being exposed to challenging games from working in a specialty toy store years earlier.  I believe in the adage "Learn by doing".  I believe that experience creates deep learning opportunities.  I introduced the game of Set to my middle school learners as a way to show them one experience of drawing on visual-spatial strengths.
                     </div>
                   </div>
               </div>  <!-- end card -->
@@ -241,15 +240,16 @@
     <div id="myMod" class="modal fade">
           <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                  <div class="modal-header"><h3 class="modal-title">Title</h3>
+                  <div class="modal-header"><h3 class="modal-title">More About Me</h3>
                   <button type="button" class="close" data-dismiss="modal">
                   <span>x</span></button>
                   </div>
                   <div class="modal-body">
-                    Hello World
+                    In the last five years, my passion for game-based learning & brain-based learning has led to local news coverage, local magazine feature coverage, and presentations at local, state, and national gifted-talented conferences.  I look forward to seeing how this passion will evolve in my next career home!  Links to presentations delivered at gifted-talented conferences can be found at my LinkedIn profile by clicking <a href="https://www.linkedin.com/in/jenschumann" target="_blank">here.</a>
+
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                   </div>
             </div>
           </div>
