fleshing out accordion content on about page

--- a/public/about.html
+++ b/public/about.html
@@ -142,23 +142,6 @@
               </div>  <!-- end card -->
 
               <div class="card">
-                  <div class="card-header bg-warning" id="headingTwo">
-                    <h5 class="mb-0 text-center">
-                      <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#nails" aria-expanded="false" aria-controls="nails">
-                        <span class="text-center font-weight-bold" style="font-size:2em;color:#EDE8CE">A Bed of Nails</span>
-                      </button>
-                    </h5>
-                  </div>
-
-                  <div id="nails" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                    <div class="card-body">
-                      <img src="assets/nails.png" class="card-img-top img-fluid pb-3">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                    </div>
-                  </div>
-              </div>  <!-- end card -->
-
-              <div class="card">
                   <div class="card-header bg-info" id="headingThree">
                     <h5 class="mb-0 text-center">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#schol" aria-expanded="false" aria-controls="schol">
@@ -170,10 +153,30 @@
                   <div id="schol" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                     <div class="card-body">
                       <img src="assets/tourney_set.png" class="card-img-top img-fluid pb-3">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                      I was afforded the opportunity to attend a National Association for Gifted Children conference in Indianapolis, & started reading Mary Cay Ricci's <span class="font-italic">Mindsets in the Classroom</span> on the plane ride home. When I came across a section which talked about how brain-based learning infused with critical thinking game play helped nurture a growth mindset, I felt validated about incorporating games in the classroom.  One of my bosses, D51 Gifted-talented Director, Heather Baskin, supported my ideas about creating a competitive space which included the use of games in the classroom.  My middle school gifted-talented colleagues also liked the idea.  The result included approval of games purchased for eight middle schools, and a collaborative effort to bring a new <strong>"sport"</strong> to life for our gifted-talented youth.  We organized a tournament which I facilitated at the middle school where I taught (Bookcliff Middle School).  After our first annual tournament was a great success, Ms. Baskin authorized the purchase of a tournament game set, which I gladly organized & executed.  We aspired to holding the Scholastica Tournament two times a year.  There's entirely too many syllables in the word <strong>"Scholastica"</strong>, but that's the name I gave it!
+
                     </div>
                   </div>
               </div>  <!-- end card -->
+
+              <div class="card">
+                  <div class="card-header bg-warning" id="headingTwo">
+                    <h5 class="mb-0 text-center">
+                      <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#nails" aria-expanded="false" aria-controls="nails">
+                        <span class="text-center font-weight-bold" style="font-size:2em;color:#EDE8CE">A Bed of Nails</span>
+                      </button>
+                    </h5>
+                  </div>
+
+                  <div id="nails" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                    <div class="card-body">
+                      <img src="assets/nails.png" class="card-img-top img-fluid pb-3">
+                      In
+                    </div>
+                  </div>
+              </div>  <!-- end card -->
+
+
 
               <div class="card">
                   <div class="card-header bg-danger" id="headingFour">
