editing & consistency across the site

--- a/public/hilo.html
+++ b/public/hilo.html
@@ -122,7 +122,7 @@
   <div class="container">
       <div class="jumbotron shadow-lg" style="background-color:#A2C0CD">
         <!-- text-primary -->
-        <div class="h1"><span class="badge badge-warning text-primary">Hi Lo Game</span></div>
+        <div class="h1"><span class="badge badge-warning text-primary" data-toggle="tooltip" data-placement="bottom" title="Are you feeling lucky?? If you are, even though this game is not yet responsive for smaller screens, you can use some of that lucky energy by playing a game, & seeing how many times it takes you to win!">Hi Lo Game</span></div>
         <hr class="my-5">
         <!-- rounded badge: -->
             <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">A simple frontend game</span> of guessing whether the next card dealt is higher or lower than the current card in play</p>
@@ -138,8 +138,7 @@
 
   <div class="row">
       <div class="col-lg-5 jumbotron bg-danger" id="hiloInfo">
-
-            <h1 class="h1" data-toggle="tooltip" data-placement="bottom" title="Are you feeling lucky?? If you are, even though this game is not yet responsive for smaller screens, you can use some of that lucky energy by playing a game, & seeing how many times it takes you to win!"><span class="badge badge-warning text-primary">High vs Low</span></h1><br>
+            <h1 class="h1"><span class="badge badge-warning text-primary">Hi vs Low</span></h1><br>
             <div id="messageHL" class="text-center text-light display-5"><span class="badge badge-pill" style="background-color:#052F5F"><strong>Rules:</strong></span> Select either Hi or Low for the next card.  Guess the value of the down facing card versus the up facing card.  You start with 3 lives.  Guess incorrectly 3 times and it's game over.  Score 5 points & you win!  How high can you go?</div>
             <br>
 
