--- a/public/whack.html
+++ b/public/whack.html
@@ -137,7 +137,7 @@
   <div class="container">
       <div class="jumbotron shadow-lg" style="background-color:#A2C0CD">
         <!-- text-primary -->
-        <div class="h1"><span class="badge badge-warning text-primary" data-toggle="tooltip" data-placement="bottom" title="This game is not yet responsive for smaller screens yet, but you can press play & try one round anyway below (..just one round... it's not addictive at all!).">Whack</span></div>
+        <div class="h1"><span class="badge badge-warning text-primary" data-toggle="tooltip" data-placement="bottom" title="This game is not yet responsive for smaller screens, but you can press play & try one round anyway below (..just one round... it's not addictive at all!).">Whack</span></div>
         <hr class="my-5">
         <!-- rounded badge: -->
             <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">Take an office break</span> and see how many computers you can whack!</p>
