bed of nails accordion content fleshed out

--- a/public/about.html
+++ b/public/about.html
@@ -171,7 +171,7 @@
                   <div id="nails" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <div class="card-body">
                       <img src="assets/nails.png" class="card-img-top img-fluid pb-3">
-                      In
+                      Double-dog dare you to claim that you wouldn't make the same face while lying on a bed of nails! My boss took this picture at the closing reception for the 61st Annual Convention of the National Association for Gifted Children in Baltimore, MD.  I learned so much at the first national conference I attended, that I took Ms. Baskin's dare regarding future attendance: those who presented were guaranteed slots that the district sponsored.  I was doing online master's studies in gifted education, and had just hosted the first Scholastica tournament.  My first national conference presentation was about how to incorporate Scholastica tournaments in middle school gifted programming services. And, at the end of the conference... I laid down on a bed of nails at the Maryland Science Center!
                     </div>
                   </div>
               </div>  <!-- end card -->
@@ -189,8 +189,9 @@
 
                   <div id="news" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                     <div class="card-body">
-                      <img src="assets/news.png" class="card-img-top img-fluid pb-3">
-                      <a href="http://www.westernslopenow.com/news/scholastica-creates-new-ways-to-learn/276175025" target="_blank">Scholastica Creates New Ways to Learn</a><br>
+
+                      <a href="http://www.westernslopenow.com/news/scholastica-creates-new-ways-to-learn/276175025" target="_blank"><img src="assets/news.png" class="card-img-top img-fluid pb-3"></a><br>
+                      Scholastica Creates New Ways to Learn
                       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. .
                     </div>
                   </div>
